--- a/files/script/form.html
+++ b/files/script/form.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello friend 👋</title>
+    <link rel="stylesheet" href="/myOdinProjects/files/css/form.css">
 </head>
 <body>
-    
+    <div>
+        
+    </div>
+    <form action="">
+        <h1>Sign up and do some great!</h1>
+        <label for="first_name">First Name</label>
+        <input type="text" name="first_name" id="first_name" required>
+
+        <label for="last_name">Last Name</label>
+        <input type="text" name="last_name" id="last_name" required>
+
+        <label for="email">EMail</label>
+        <input type="email" name="email" id="email" required>
+
+        <label for="phone">Phone Number</label>
+        <input type="number" value="0 - 9" min="0" required>
+
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" required>
+
+        <label for="confirm_pw">Confirm Password</label>
+        <input type="password" name="confirm_pw" id="confirm_pw" required>
+
+        <button type="submit">Create Account</button>
+        <p>Allready have an account? <a href="#">Log in</a></p>
+
+    </form>
 </body>
 </html>
