minor design changes

--- a/files/scripts/admin_dashboard.html
+++ b/files/scripts/admin_dashboard.html
@@ -170,31 +170,39 @@
                         <div class="trending">
 
                             <div class="trending-item">
-                                <div class="trend-circle"></div>
-                                <div class="trend-text">
-                                    <a href="#">@teagan</a>
-                                    <p>World Peace Builder</p>
+                                <div class="trend-profile-container">
+                                    <div class="trend-circle"></div>
+                                    <div class="trend-text">
+                                        <a href="#">@teagan</a>
+                                        <p>World Peace Builder</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="trending-item">
-                                <div class="trend-circle"></div>
-                                <div class="trend-text">
-                                    <a href="#">@teagan</a>
-                                    <p>World Peace Builder</p>
+                                <div class="trend-profile-container">
+                                    <div class="trend-circle"></div>
+                                    <div class="trend-text">
+                                        <a href="#">@morgan</a>
+                                        <p>Super Cool Project</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="trending-item">
-                                <div class="trend-circle"></div>
-                                <div class="trend-text">
-                                    <a href="#">@teagan</a>
-                                    <p>World Peace Builder</p>
+                                <div class="trend-profile-container">
+                                    <div class="trend-circle"></div>
+                                    <div class="trend-text">
+                                        <a href="#">@kendall</a>
+                                        <p>Life Changing App</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="trending-item">
-                                <div class="trend-circle"></div>
-                                <div class="trend-text">
-                                    <a href="#">@teagan</a>
-                                    <p>World Peace Builder</p>
+                                <div class="trend-profile-container">
+                                    <div class="trend-circle"></div>
+                                    <div class="trend-text">
+                                        <a href="#">@alex</a>
+                                        <p>No Traffic Maker</p>
+                                    </div>
                                 </div>
                             </div>
 
